===============================================================================
$Id$
$URL$
===============================================================================
New Checkin: mlevy
Date:        2 Dec 2012
Summary:     Overhaul of the output routines, now all writing is done from one
             of two routines (single_col or multi_col) and variables to be
             written are also an argument sent to vmix_output_write(). As the
             drivers evolve, this will make it easier to add variables to the
             output stream.

Files Modified:
M       reg_tests/shear-KPP/plot_visc_coeffs.ncl
M       doc/protex_documentation.pdf
M       src/vmix_output.F90
M       src/drivers/vmix_KPP-shear_driver.F90
M       src/drivers/vmix_BL_driver-pointers.F90
M       src/drivers/vmix_BL_driver-mem_copy.F90
===============================================================================
New Checkin: mlevy
Date:        1 Dec 2012
Summary:     Updated the README file, renamed shear-KPP test script and the
             PS file generated by the NCL script.

Files Modified:
D       reg_tests/shear-KPP/KPP_test.sh
M       reg_tests/shear-KPP/plot_visc_coeffs.ncl
A  +    reg_tests/shear-KPP/Large_test.sh
M       README
===============================================================================
New Checkin: mlevy
Date:        1 Dec 2012
Summary:     Update NCL scripts to read in netCDF data (if available), ascii
             data otherwise. Scripts report error if neither file is found.
             Also, for shear-KPP test we are plotting viscosity coefficients.

Files Modified:
A  +    reg_tests/shear-KPP/plot_visc_coeffs.ncl
D       reg_tests/shear-KPP/plot_diff_coeffs.ncl
M       reg_tests/Bryan-Lewis/plot_diff_coeffs.ncl
===============================================================================
New Checkin: mlevy
Date:        1 Dec 2012
Summary:     New driver to test shear-KPP, can recreate figure 3 from Large et